<resources>
    <string name="app_name">TT_Logging</string>
    <string name="title_activity_registro_usuario">registro_usuario</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- String para secion-->
    <string name="not_log_in">No se pudo iniciar sesión</string>
    <string name="log_out">Log Out</string>
    <string name="revoke">Revoke</string>
    <string name="not_close_session">No se pudo cerrar sesión</string>
    <string name="not_revoke"></string>
    <string name="not_firebase_auth">No se pudo autenticar con Firebase</string>

    <!-- Medicamentos -->
    <string name="titulomedicamentos">Medicamentos Actuales</string>
    <string name="medicamentonombre">Nombre</string>
    <string name="medicamentoefecto">Efecto</string>

    <string name="pmedicamentonombre">Nombre</string>
    <string name="pmedicamentoefecto">Efecto</string>
    <string name="pmedicamentotermino">Termino</string>
    <string name="pmedicamentoinicio">Inicio</string>
    <string name="pmedicamentocantidad">Cantidad</string>

    <!-- Datos Medicos -->
    <string name="titulodatos">Datos Medicos</string>
    <string name="datonombre">Nombre</string>
    <string name="datovariable">Descripcion</string>

    <string name="tituloseguimiento">Seguimiento</string>
    <string name="pdatonombre">Nombre</string>
    <string name="pdatovariable">Descripcion</string>
    <string name="tituloadherencia">Adherencia</string>
    <string name="fecha">Fecha</string>
    <string name="pmedicamentovalidado">Total Validados</string>
    <string name="pmedicamentonovalidado">Total No Validados</string>
    <string name="tituloadddatos">Agregar Medida</string>
    <string name="titulomisdatos">Seleccionar Dato:</string>
    <string name="pingresarfecha">Fecha Actual</string>
</resources>