<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SeguimientoDato"
    android:background="#f9f9ed">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvTituloSeguimiento"
            android:layout_width="match_parent"
            android:layout_height="@dimen/tamnav"
            android:background="#25B9D0"
            android:elevation="8dp"
            android:gravity="center"
            android:text="@string/tituloseguimiento"
            android:textAlignment="center"
            android:textColor="#FFF"
            android:textSize="@dimen/titulouno"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal"
            android:layout_height="@dimen/tamnav">

            <TextView
                android:id="@+id/tvFijoVariable"
                android:layout_width="wrap_content"
                android:text="Seleccionar Tipo:"
                android:layout_marginTop="8dp"
                android:layout_height="@dimen/tamnav"
                android:layout_weight="1"
                android:gravity="center"
                android:textAlignment="center"
                android:textColor="#000"
                android:textSize="@dimen/titulodos"/>

            <Spinner
                android:id="@+id/sTipoGrafica"
                android:layout_width="100dp"
                android:layout_height="@dimen/tamnav"
                android:layout_weight="1"
                android:background="#25B9D0"
                android:layout_marginTop="8dp"
                android:textSize="@dimen/titulodos"/>

        </LinearLayout>

        <com.github.mikephil.charting.charts.BarChart
            android:id="@+id/bcGrafico"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:elevation="8dp" />

        <TextView
            android:id="@+id/tvUltimoDato"
            android:layout_width="match_parent"
            android:layout_height="@dimen/alturatitulo"
            android:gravity="center"
            android:text="Ultima Actualizacion"
            android:textAlignment="center"
            android:textColor="#000"
            android:textSize="@dimen/titulouno"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvDatoVariable"
                    android:text="@string/pdatovariable"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/alturatxt"
                    android:gravity="center"
                    android:textAlignment="center"
                    android:textColor="#000"
                    android:textSize="@dimen/titulodos"/>



                <TextView
                    android:id="@+id/tvFijoFecha"
                    android:layout_width="match_parent"
                    android:text="Fecha: "
                    android:layout_height="@dimen/alturatxt"
                    android:gravity="center"
                    android:textAlignment="center"
                    android:textColor="#000"
                    android:textSize="@dimen/titulodos"/>


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/tvDatoTipo"
                    android:text="@string/pdatonombre"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/alturatxt"
                    android:gravity="center"
                    android:textAlignment="center"
                    android:textColor="#000"
                    android:textSize="@dimen/titulodos" />

                <TextView
                    android:id="@+id/tvDatoFecha"
                    android:layout_width="match_parent"
                    android:text="Sin agregar"
                    android:layout_height="@dimen/alturatxt"
                    android:gravity="center"
                    android:textAlignment="center"
                    android:textColor="#000"
                    android:textSize="@dimen/titulodos"/>

                <TextView
                    android:id="@+id/tvFijoTipo"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/alturatxt"
                    android:gravity="center"
                    android:textAlignment="center"
                    android:textColor="#000"
                    android:textSize="@dimen/titulodos"/>



            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>