<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddDatoMedico">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:background="#f9f9ed"
        android:orientation="vertical">



        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/tamnav"
            android:text="@string/tituloadddatos"
            android:background="#25B9D0"
            android:textColor="#FFF"
            android:textAlignment="center"
            android:textStyle="bold"
            android:gravity="center"
            android:textSize="@dimen/titulouno" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvFijoDatos"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/alturatxt"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="25dp"
                    android:elevation="8dp"
                    android:gravity="center"
                    android:text="@string/titulomisdatos"
                    android:textAlignment="center"
                    android:textColor="#000"
                    android:textSize="@dimen/titulotres"
                    android:layout_weight="1"/>

                <Spinner
                    android:id="@+id/sTipo"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/alturatxt"
                    android:layout_weight="1"
                    android:background="#25B9D0"
                    android:layout_marginTop="8dp"
                    android:textSize="@dimen/titulodos"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/alturatxt"
                    android:layout_weight="1"
                    android:textSize="@dimen/titulotres"
                    android:textColor="#000"
                    android:gravity="center"
                    android:textAlignment="center"
                    android:text="Valor Medido:" />

                <EditText
                    android:id="@+id/etValor"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/alturatxt"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="40.0"
                    android:inputType="numberDecimal"
                    android:textSize="@dimen/titulotres"
                    android:textColor="#000"/>

                <TextView
                    android:id="@+id/tvMetrica"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/alturatxt"
                    android:layout_weight="1"
                    android:text="TextView"
                    android:gravity="center"
                    android:textAlignment="center"
                    android:textSize="@dimen/titulotres"
                    android:textColor="#000"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/alturatxt"
                    android:textColor="#000"
                    android:gravity="center"
                    android:textSize="@dimen/titulotres"
                    android:layout_weight="1"
                    android:text="Fecha: " />

                <TextView
                    android:id="@+id/tvFecha"
                    android:layout_width="wrap_content"
                    android:textSize="@dimen/titulotres"
                    android:layout_height="@dimen/alturatxt"
                    android:textColor="#000"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:gravity="center"
                    android:text="@string/pingresarfecha" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="TextView" />

                <Button
                    android:id="@+id/bAdd"
                    android:layout_width="100dp"
                    android:layout_height="@dimen/alturatxt"
                    android:background="#25B9D0"
                    android:gravity="center"
                    android:text="Guardar"/>

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="TextView" />
            </LinearLayout>

        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>